--- a/src/components/Body/Restaurant.css
+++ b/src/components/Body/Restaurant.css
@@ -9,59 +9,129 @@
 }
 
 .restaurant-card:hover {
-    transform: scale(1.02);
-    transition: transform 300ms ease-in-out;
+  transform: scale(1.02);
+  transition: transform 300ms ease-in-out;
 }
 
 .list-of-restro {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    align-content: center;
-    gap: 20px;
-    width: 100%;
-    margin-top: 2rem
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-content: center;
+  gap: 20px;
+  width: 100%;
+  margin-top: 2rem;
 }
 
 .restaurant-card > img {
-    width: 100%;
-    
+  width: 100%;
 }
 
 .Name-container > h4 {
-    margin: 5px;
+  margin: 5px;
 }
 .Name-container > p {
-    margin: 5px;
-    font-size: 13px;
-    color: grey;
+  margin: 5px;
+  font-size: 13px;
+  color: grey;
 }
 
 .details-container {
-    display: flex;
-    flex-direction: row;
-    
-    
+  display: flex;
+  flex-direction: row;
 }
 
 .details-container > p {
-    font-size: 13px;
-    margin: 5px;
+  font-size: 13px;
+  margin: 5px;
 }
-
-
 
 .red {
-    background-color: red;
-    padding: 1px 5px 1px 5px;
-    color: white;
+  background-color: red;
+  padding: 1px 5px 1px 5px;
+  color: white;
 }
 .green {
-    background-color:rgb(71, 205, 71);
-    padding: 1px 5px 1px 5px;
-    color: white;
+  background-color: rgb(71, 205, 71);
+  padding: 1px 5px 1px 5px;
+  color: white;
 }
 .orange {
-    background-color: orange;
-    padding: 1px 5px 1px 5px;
-    color: white;
+  background-color: orange;
+  padding: 1px 5px 1px 5px;
+  color: white;
+}
+.search-container {
+  display: flex;
+  padding: 1rem;
+}
+
+.search-container > input {
+  height: 34px;
+  width: 300px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 4px;
+  border: 1px solid grey;
+  outline: none;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+}
+
+
+
+.carousel > div > img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin: 1rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.carousel > div > img:hover {
+  transform: scale(1.04);
+  transition: transform 300ms ease-in-out;
+}
+
+.main-carousel {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(1, 1, 31);
+  padding: 2rem;
+}
+
+.main-carousel > button {
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 100%;
+  margin: 16px;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+  z-index: 1;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+  font-size: 20px;
+}
+
+.main-carousel > button:hover {
+  transform: scale(1.04);
+  transition: transform 300ms ease-in-out;
+}
+
+.carousel {
+  flex: 10% 0 25%; /* Adjust the width of each item as needed */
+  transition: transform 0.3s ease;
+}
+
+.carousel-item .active {
+  transform: translateX(0);
 }
