--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,15 @@
 .header-container {
   background-color: whitesmoke;
-  height: 60px;
+  height: 80px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  
+  position: fixed;
+  width: 100%;
+  z-index: 2;
+  top: 0;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .nav-logo {
