--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,8 @@
   width: 100%;
   z-index: 2;
   top: 0;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .nav-logo {
@@ -24,13 +25,25 @@
   margin: 6px;
 }
 
-.nav-links > ul {
+.nav-links {
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  margin: 10px;
+  margin: 16px;
 }
 
 .nav-links > a {
   margin: 8px;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.nav-links > a:hover {
+  color: coral;
+}
+
+ i {
+  margin: 5px;
 }
