--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,44 @@
+.a1 {
+  background-color: rgb(0, 0, 0);
+  height: 100%;
+  padding-bottom: 1rem;
+}
+
 .footer {
-    background-color: rgb(7, 3, 32);
-    margin-top: 2rem;
-    padding: 2rem;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+  margin-top: 2rem;
+  padding: 2rem;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.usefull-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.usefull-container > a {
+  color: white;
+  margin-bottom: 15px;
+}
+
+.usefull-container > a:hover {
+  color: coral;
+  font-weight: 500;
+}
+
+hr {
+    border: 1px solid rgb(255, 255, 255);
+    margin: auto;
+    width: 90%;
+    text-align: center;
+    
+}
+
+.author > p {
+  color: white;
+  text-align: center;
+  letter-spacing: 0.3px;
+  word-spacing: 1px;
 }
