--- a/src/components/Body/details.css
+++ b/src/components/Body/details.css
@@ -121,3 +121,12 @@
   font-size: 20px;
   cursor: pointer;
 }
+
+.fim {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-content: center;
+  gap: 20px;
+  width: 100%;
+  margin-top: 2rem;
+}
