--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -42,3 +42,17 @@ hr {
   letter-spacing: 0.3px;
   word-spacing: 1px;
 }
+
+
+@media all and (max-width: 768px) {
+    .footer {
+      display: flex;
+      flex-direction: column;
+    }
+    .gp {
+      width: 100px;
+    }
+    .author > p {
+      font-size: 12px;
+    }
+}
