--- a/src/components/Body/Restaurant.css
+++ b/src/components/Body/Restaurant.css
@@ -45,7 +45,6 @@
 .details-container > p {
   font-size: 13px;
   margin: 5px;
-  color: black;
 }
 
 .red {
@@ -66,6 +65,7 @@
 
 a {
   text-decoration: none;
+  color: black;
 }
 .search-container {
   display: flex;
@@ -161,19 +161,73 @@ a {
   transform: translateX(0);
 }
 
+.res-card {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(255, 255, 255);
+  padding: 10px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: all 300ms ease-in-out;
+}
+
 @media all and (max-width: 768px) {
   .list-of-restro {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-content: center;
     gap: 10px;
-   
     margin-top: 2rem;
-   
+  }
+
+  .restaurant-card {
+    height: 230px;
+  }
+
+  .rl {
+    padding: 0.8rem;
+  }
+  .Name-container > h4 {
+    font-size: 14px;
+  }
+  .Name-container > p {
+    font-size: 11px;
+  }
+  .details-container > p {
+    font-size: 12px;
+  }
+
+  .orange,
+  .red,
+  .green {
+    display: flex;
+    flex-direction: row;
+    padding: 1px 3px 1px 3px;
+    align-items: center;
+    height: min-content;
+  }
+
+  .inp {
+    width: 100%;
+    height: 45px;
+  }
+
+  .search-container {
+    padding: 0px;
+  }
+
+  .sc {
+    padding: 10px;
+    background-color: #f0f8ff;
+  }
+
+  .carousel > div > img {
+    width: 100px;
+    height: 100px;
+  }
+
+  .main-carousel {
+    padding: 1rem;
     
   }
 
-
-
- 
+  
 }
