--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,23 +62,25 @@ i {
   }
 
   .nav-links1 {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     margin: 0px;
-    color: white !important;
+    color: rgb(0, 0, 0) !important;
     display: flex;
     position: absolute;
     z-index: 1;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 200vh;
-    margin-top: 10rem;
+    padding: 2rem;
+    margin-top: 19.6rem;
     transform: translateX(100%);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     transition: transform 500ms ease;
   }
 
   .nav-links2 {
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     margin: 0px;
     color: white !important;
     display: flex;
@@ -87,14 +89,16 @@ i {
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 200vh;
-    margin-top: 10rem;
-    transform: translateX(50%);
+    padding: 2rem;
+    margin-top: 19.6rem;
+    transform: translateX(40%);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     transition: transform 500ms ease;
   }
 
   .nav-links > a {
-    color: white;
+    color: rgb(9, 9, 9);
   }
 
   .burger {
@@ -102,7 +106,12 @@ i {
   }
 
   .burger > i {
-    font-size: 20px;
+    font-size: 26px;
+    font-weight: bold;
+  }
+
+  .main-carousel > button {
+    margin: -6px !important;
   }
 }
 
