--- a/src/components/Body/details.css
+++ b/src/components/Body/details.css
@@ -73,7 +73,7 @@
 .food-item-container {
   display: flex;
   flex-direction: column;
-  width: 200px;
+  width: 95%;
   height: max-content;
   padding: 6px;
   border-radius: 6px;
